--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.8.0",
     "axios": "^1.7.7",
+    "dompurify": "^3.2.7",
     "install": "^0.13.0",
-    "jspdf": "^2.5.2",
+    "jspdf": "^3.0.3",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "npm": "^10.9.0",
@@ -41,6 +42,6 @@
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "vite": "^7.1.6"
   }
 }
